k8s/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: conduit
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: conduit
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
